Worker/User register complete

--- a/TrashPickup/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup/TrashPickup.csproj
@@ -201,6 +201,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706281226036_initial migration.cs" />
+    <Compile Include="Migrations\201706281226036_initial migration.Designer.cs">
+      <DependentUpon>201706281226036_initial migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706282226479_update-database.cs" />
+    <Compile Include="Migrations\201706282226479_update-database.Designer.cs">
+      <DependentUpon>201706282226479_update-database.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -276,6 +285,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201706281226036_initial migration.resx">
+      <DependentUpon>201706281226036_initial migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706282226479_update-database.resx">
+      <DependentUpon>201706282226479_update-database.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
