page navigation thru roles active

--- a/TrashPickup/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup/TrashPickup.csproj
@@ -196,8 +196,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\WorkerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -212,6 +215,14 @@
     <Compile Include="Migrations\201706301457469_added user info to models.cs" />
     <Compile Include="Migrations\201706301457469_added user info to models.Designer.cs">
       <DependentUpon>201706301457469_added user info to models.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707041829156_Roles hooked up to pages.cs" />
+    <Compile Include="Migrations\201707041829156_Roles hooked up to pages.Designer.cs">
+      <DependentUpon>201707041829156_Roles hooked up to pages.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707041852599_Updated roles.cs" />
+    <Compile Include="Migrations\201707041852599_Updated roles.Designer.cs">
+      <DependentUpon>201707041852599_Updated roles.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModel.cs" />
@@ -279,7 +290,8 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
-    <Content Include="Views\Worker\Index.cshtml" />
+    <Content Include="Views\Employee\Index.cshtml" />
+    <Content Include="Views\Admin\AdminView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -301,6 +313,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706301457469_added user info to models.resx">
       <DependentUpon>201706301457469_added user info to models.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707041829156_Roles hooked up to pages.resx">
+      <DependentUpon>201707041829156_Roles hooked up to pages.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707041852599_Updated roles.resx">
+      <DependentUpon>201707041852599_Updated roles.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
