--- a/TrashPickup/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup/TrashPickup.csproj
@@ -232,6 +232,14 @@
     <Compile Include="Migrations\201707052127246_added city and state.Designer.cs">
       <DependentUpon>201707052127246_added city and state.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707052149264_added city and state.cs" />
+    <Compile Include="Migrations\201707052149264_added city and state.Designer.cs">
+      <DependentUpon>201707052149264_added city and state.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707052156289_state and city added.cs" />
+    <Compile Include="Migrations\201707052156289_state and city added.Designer.cs">
+      <DependentUpon>201707052156289_state and city added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModel.cs" />
     <Compile Include="Models\IdentityViewModel.cs" />
@@ -301,6 +309,7 @@
     <Content Include="Views\Employee\Index.cshtml" />
     <Content Include="Views\Admin\AdminView.cshtml" />
     <Content Include="Views\Employee\MapView.cshtml" />
+    <Content Include="Views\Employee\EmployeeCustomersView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -334,6 +343,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707052127246_added city and state.resx">
       <DependentUpon>201707052127246_added city and state.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707052149264_added city and state.resx">
+      <DependentUpon>201707052149264_added city and state.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707052156289_state and city added.resx">
+      <DependentUpon>201707052156289_state and city added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
