Fixed day not pushing to db

--- a/TrashPickup/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup/TrashPickup.csproj
@@ -311,7 +311,7 @@
     <Content Include="Views\Employee\MapView.cshtml" />
     <Content Include="Views\Employee\EmployeeCustomersView.cshtml" />
     <Content Include="Views\Customer\ChangePickupDay.cshtml" />
-    <Content Include="Views\Customer\VieAmountOwed.cshtml" />
+    <Content Include="Views\Customer\ViewAmountOwed.cshtml" />
     <Content Include="Views\Customer\SetVacationDay.cshtml" />
   </ItemGroup>
   <ItemGroup>
